k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hrm-tool
  labels:
    name: hrm-tool
    app: hrm-tool-next-gen
